Working towards resource based authorization policies. Filters server response objects based on rule evaluation.

--- a/McAuthz/McAuthz.csproj
+++ b/McAuthz/McAuthz.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Metadata" Version="7.0.9" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.6.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
