--- a/McAuthsz.Tests/McAuthz.Tests.csproj
+++ b/McAuthsz.Tests/McAuthz.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,6 +18,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\McAuthz\McAuthz.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestData\adventurers.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\monsters.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\npcs.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
