Adding components of the example app. Program.cs has the naive RuleProvider implmentation we're starting with.

--- a/McAttributes/appsettings.Development.json
+++ b/McAttributes/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -17,7 +17,6 @@
     "ClientSecret": "Lio8Q~NNDHm-IVJpixd0Nu36N4bTsbTEwrEqIcG2",
     "Domain": "mcardletech.onmicrosoft.com",
     "GetClaimsFromUserInfoEndpoint": true,
-    "ResponseType": "id_token",
     "TenantId": "63157f30-8e13-4d09-bee7-a847b2dbb0a5"
   }
 }
