--- a/McAttributes/appsettings.json
+++ b/McAttributes/appsettings.json
@@ -16,7 +16,7 @@
       "ClientSecret": "",
       "Domain": "[Enter the domain of your tenant, e.g. contoso.onmicrosoft.com]",
       "GetClaimsFromUserInfoEndpoint": true,
-      "ResponseType": "id_token",
+      "ResponseType": "profile,openid",
       "TenantId": "common"
     },
     "AllowedHosts": "*"
