--- a/McAuthz/McAuthz.csproj
+++ b/McAuthz/McAuthz.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>McAuthorization</Title>
-	<PackageVersion>0.1.4</PackageVersion>
+	<PackageVersion>0.2.0</PackageVersion>
     <PackageProjectUrl>https://github.com/sean-m/McAuthz</PackageProjectUrl>
     <Copyright>Sean McArdle 2025</Copyright>
     <RepositoryUrl>https://github.com/sean-m/McAuthz</RepositoryUrl>
@@ -13,6 +13,7 @@
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageTags>asp.net core, authorization, rbac, abac</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
